fix(heading): use proper heading

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 			<img class="logo" src="images/logo.svg" alt="PING Logo" />
 
 			<section class="launching">
-				<p class="launching-text">
+				<h1 class="launching-text">
 					We are launching
 					<span class="fancy">soon!</span>
-				</p>
+				</h1>
 
 				<p class="subscribe-text">Subscribe and get notified!</p>
 			</section>
