feat: social links label

--- a/index.html
+++ b/index.html
@@ -56,13 +56,25 @@
 			/>
 
 			<section class="social-links">
-				<a class="social-button" href="#!">
+				<a
+					class="social-button"
+					href="#!"
+					aria-label="Follow Ping on Facebook"
+				>
 					<i class="fa-brands fa-facebook-f"></i>
 				</a>
-				<a class="social-button" href="#!">
+				<a
+					class="social-button"
+					href="#!"
+					aria-label="Follow Ping on Twitter"
+				>
 					<i class="fa-brands fa-twitter"></i>
 				</a>
-				<a class="social-button" href="#!">
+				<a
+					class="social-button"
+					href="#!"
+					aria-label="Follow Ping on Instagram"
+				>
 					<i class="fa-brands fa-instagram"></i>
 				</a>
 			</section>
