refactor: refactor social links

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				alt="Dashboard Illustration"
 			/>
 
-			<section class="social-links">
+			<div class="social-links">
 				<a
 					class="social-button"
 					href="#!"
@@ -77,7 +77,7 @@
 				>
 					<i class="fa-brands fa-instagram"></i>
 				</a>
-			</section>
+			</div>
 
 			<footer>
 				<p class="copyright">
